--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# ===============================
+# DATABASE
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/emotional_help
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
