--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/emotional_help
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
