--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <packaging>war</packaging>
+
     <groupId>com.epam</groupId>
     <artifactId>rd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
