--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #server.port=8082
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
