--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/emotional_help
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #server.port=8082
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
