application prop fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/emotional_help
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Drive
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 jwt.secret=Ihobethisworked123wellwhatdoyouthinkaboutit*(4343!
 jwt.jwtExpirationInMs=86400000
 jwt.jwtExpirationInMsRememberMe=604800000
