--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,7 @@ jwt.jwtExpirationInMs=86400000
 jwt.jwtExpirationInMsRememberMe=604800000
 link=http://localhost:4200
 #link=http://5.58.12.93:9090
-
-server.port=8082
+#server.port=8080
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
