--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=Ihobethisworked123wellwhatdoyouthinkaboutit*(4343!
 jwt.jwtExpirationInMs=86400000
 jwt.jwtExpirationInMsRememberMe=604800000
-link=http://localhost:4200
+#link=http://localhost:4200
 #link=http://5.58.12.93:9090
+link=http://139.59.170.104:9090
 #server.port=8080
 
 
